--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "moduleResolution": "node",
     "sourceMap": true,
     "emitDecoratorMetadata": true,
-    "expirementalDecorators": true,
+    "experimentalDecorators": true,
     "removeComments": false,
     "noImplicitAny": false
   },
